# AI-sales-query-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  evaluator.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
agent/: __init__.py  llm.py  sql_agent.py
app/: __init__.py  main.py  mcp_server.py
app/agent/: sql_agent.py
data/: sales.db
scripts/: setup_sales_db.py
tests/: test_e2e.py  test_query.py
