[project]
name = "ai-sales-query-agent"
version = "0.1.0"
description = "A FastAPI service that translates natural language questions into SQL queries against a SQLite database."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "mcp[cli]>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.39.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "faker>=30.0.0",
    "ruff>=0.7.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end tests that require a real LLM API key (deselected by default)",
]
